Update 'vuynv2nqn-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe:22c48b062ebe327ed6bfd0c7c5aa223662c45f95@sha256:8b391820edc522ce9c949355ef8384a91a543e1754dd8d54a79355643155efb6

--- a/components/vuynv2nqn-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/vuynv2nqn-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: vuynv2nqn-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:22c48b062ebe327ed6bfd0c7c5aa223662c45f95@sha256:8b391820edc522ce9c949355ef8384a91a543e1754dd8d54a79355643155efb6
+          name: container-image
